--- a/a/b/index.html
+++ b/a/b/index.html
@@ -1,1 +1,1 @@
-<h3>Directories</h3><br><ul></ul><h3>Links</h3><br><ul><li><a href="https://espn.com">c</a> &#x2192; <a href="https://espn.com">https://espn.com</a></li></ul>
+<h3>Directories</h3><ul><li><a href="a/">a/</a></li><li><a href="chungus/">chungus/</a></li></ul><h3>Links</h3><ul><li><a href="https://espn.com">c</a> &#x2192; <a href="https://espn.com">https://espn.com</a></li></ul>
