--- a/a/index.html
+++ b/a/index.html
@@ -1,1 +1,1 @@
-<h3>Directories</h3><br><ul><li><a href="b/">b/</a></li></ul><h3>Links</h3><br><ul></ul>
+<h3>Directories</h3><ul><li><a href="b/">b/</a></li></ul>
