Set a/b/c -> https://espn.com

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h3>Directories</h3><ul><li><a href="a/">a/</a></li><li><a href="chungus/">chungus/</a></li></ul><h3>Links</h3><ul><li><a href="https://imgur.com/gallery/hxPPI2i">chungus</a> &#x2192; <a href="https://imgur.com/gallery/hxPPI2i">https://imgur.com/gallery/hxPPI2i</a></li></ul>
+<h3>Directories</h3><ul><li><a href="a/">a/</a></li><li><a href="chungus/">chungus/</a></li></ul><h3>Links</h3><ul><li><a href="https://imgur.com/gallery/hxPPI2i">chungus</a> :: <a href="https://imgur.com/gallery/hxPPI2i">https://imgur.com/gallery/hxPPI2i</a></li></ul>
