--- a/chungus/index.html
+++ b/chungus/index.html
@@ -1,1 +1,1 @@
-<h3>Directories</h3><ul><li><a href="a/">a/</a></li><li><a href="chungus/">chungus/</a></li></ul><h3>Links</h3><ul><li><a href="https://google.com">fungus</a> &#x2192; <a href="https://google.com">https://google.com</a></li></ul>
+<h3>Directories</h3><ul><li><a href="a/">a/</a></li><li><a href="chungus/">chungus/</a></li></ul><h3>Links</h3><ul><li><a href="https://google.com">fungus</a> :: <a href="https://google.com">https://google.com</a></li></ul>
