Set key "mike" => "themichaelyang.com"

--- a/mike.html
+++ b/mike.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=themichaelyang.com"/>
+<meta http-equiv="refresh" content="0; URL=http://themichaelyang.com"/>
