--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ a { color: black }
 td:nth-child(1) { text-align: right }
 </style>
 <h1>gitlinks</h1>
-<table><tbody><tr><td><a href="zoom">zoom</a></td><td>→</td><td><a href="https://mit.zoom.us/j/8298577652">https://mit.zoom.us/j/8298577652</a></td></li></tbody></table>
+<table><tbody></tbody></table>
