--- a/twitter/index.html
+++ b/twitter/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL=https://twitter.com/logan_engstrom/"/>
+<meta http-equiv="refresh" content="0; URL=https://twitter.com/logan_engstrom"/>
