Set key "eecsgsa/publicity" → "https://drive.googl

--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ a { color: black }
 td:nth-child(1) { text-align: left }
 </style>
 <h1>gitlinks</h1>
-<table><tbody><tr><td><a href="twitter">twitter</a></td><td>→</td><td><a href="https://twitter.com/logan_engstrom">https://twitter.com/logan_engstrom</a></td></li></tbody></table>
+<table><tbody><tr><td><a href="eecsgsa/publicity">eecsgsa/publicity</a></td><td>→</td><td><a href="https://drive.google.com/drive/u/0/folders/0BwboyDkd2d9mMVFmR3k2WW9vMzQ">https://drive.google.com/drive/u/0/folders/0BwboyDkd2d9mMVFmR3k2WW9vMzQ</a></td></li><tr><td><a href="twitter">twitter</a></td><td>→</td><td><a href="https://twitter.com/logan_engstrom">https://twitter.com/logan_engstrom</a></td></li></tbody></table>
